== Version 1.0.4 (in SVN)

* Fixed [#11143] Views code for ActionController::Base#render broke between 1.0.0 and 1.0.3 on Rails Edge r6731
* Added raise_controller_errors for controller examples in Spec::Rails

== Version 1.0.3
Bug fixes.

* Fixed [#11104] Website uses old specify notation
* Applied [#11101] StringHelpers.starts_with?(prefix) assumes a string parameter for _prefix_
* Removed 'rescue nil' which was hiding errors in controller examples.
* Fixed [#11075] controller specs fail when using mocha without integrated_views
* Fixed problem with redirect_to failing incorrectly against edge rails.
* Fixed [#11082] RspecResourceGenerator should be RspecScaffoldGenerator
* Fixed [#10959] Focused Examples do not work for Behaviour defined with constant with modules

== Version 1.0.2
This is just to align the version numbers in rspec and rspec_on_rails.

== Version 1.0.1
This is a maintenance release with mostly cleaning up, and one minor enhancement -
Modules are automatically included when described directly.

* Renamed Spec::Rails' rspec_resource generator to rspec_scaffold.
* Removed Spec::Rails' be_feed matcher since it's based on assert_select_feed which is not part of Rails (despite that docs for assert_select_encoded says it is).
* describe(SomeModule) will include that module in the examples. Like for Spec::Rails helpers, but now also in core.
* Header in HTML report will be yellow instead of red if there is one failed example
* Applied [#10951] Odd instance variable name in rspec_model template (patch from Kyle Hargraves)
* Improved integration with autotest (Patches from Ryan Davis and David Goodland)
* Some small fixes to make all specs run on JRuby.

== Version 1.0.0
The stake in the ground release. This represents a commitment to the API as it is. No significant
backwards compatibility changes in the API are expected after this release.

* Fixed [#10923] have_text matcher does not support should_not
* Fixed [#10673] should > and should >= broken