@@ -1,5 +1,6 @@
 == Version 1.0.4 (in SVN)
 
+* Fixed [#11137] rspec incorrectly handles flash after resetting the session
 * Fixed [#11143] Views code for ActionController::Base#render broke between 1.0.0 and 1.0.3 on Rails Edge r6731
 * Added raise_controller_errors for controller examples in Spec::Rails
 
